# mini-hbut

./: .gitignore  .npmrc  .tmp_ai_req.json  .tmp_ai_stream_req.json  .tmp_course_selection_chunk.txt  .tmp_course_selection_chunk2.txt  .tmp_course_selection_chunk3.txt  .tmp_dev_pid.txt  404.html  AGENTS.md  CAPACITOR_MIGRATION.md  CHANGELOG.md  CONTRIBUTING.md  DEV_STATUS.md  LICENSE  README.md  RELEASE_v1.3.2.md  RELEASE_v1.3.3.md  RELEASE_v1.3.4.md  RELEASE_v1.3.5.md  RELEASE_v1.4.1.md  RELEASE_v1.4.2.md  RELEASE_v1.4.3.md  SECURITY.md  THIRD_PARTY_NOTICES.md  _headers  app-demo.html  build_android_apk.py  capacitor.config.ts  capacitor.config.ts.md  components.json  docs.html  docs.txt  edgeone.json  fix_ensure_token.py  fix_login_retry.py  fix_relogin.py  fix_sso_error.py  generate_daily_access_key.py  generate_icons.py  (+40 more)
.dist-trash-1776922666444/: index.html
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md
.playwright-mcp/: page-2026-05-10T15-56-50-579Z.yml  page-2026-05-10T15-58-27-006Z.yml  page-2026-05-10T16-19-40-000Z.yml  page-2026-05-10T16-20-33-083Z.yml  page-2026-05-10T16-21-11-072Z.yml  page-2026-05-10T16-21-23-972Z.yml  page-2026-05-11T07-52-28-002Z.yml  page-2026-05-11T12-39-29-840Z.yml  page-2026-05-11T12-40-06-135Z.yml  page-2026-05-11T12-43-13-113Z.yml  page-2026-05-11T12-43-38-723Z.yml  page-2026-05-11T12-45-19-915Z.yml  page-2026-05-11T12-55-27-478Z.yml  page-2026-05-16T12-13-19-468Z.yml  page-2026-05-16T12-13-39-656Z.yml  page-2026-05-16T12-20-13-927Z.yml  page-2026-05-17T01-26-33-759Z.yml  page-2026-05-21T18-30-31-328Z.yml  page-2026-05-21T18-32-57-572Z.yml  page-2026-05-21T20-17-28-503Z.yml  page-2026-05-21T20-22-04-276Z.yml  page-2026-05-21T20-22-45-368Z.yml  page-2026-05-21T20-41-42-152Z.yml  page-2026-05-21T20-42-56-794Z.yml  page-2026-05-21T20-45-00-219Z.yml  page-2026-05-21T21-50-09-676Z.yml  page-2026-05-22T16-48-23-415Z.yml  page-2026-05-22T18-35-15-738Z.yml  page-2026-05-22T19-28-39-906Z.yml  page-2026-05-22T20-37-03-481Z.yml  page-2026-05-22T21-33-54-158Z.yml  page-2026-05-23T18-35-26-253Z.yml  page-2026-05-23T18-37-10-034Z.yml  page-2026-05-23T18-45-53-007Z.yml  page-2026-05-23T18-48-39-644Z.yml  page-2026-05-23T18-51-52-410Z.yml  page-2026-05-23T18-53-42-263Z.yml  page-2026-05-23T18-54-12-481Z.yml  page-2026-05-23T18-55-03-758Z.yml  page-2026-05-23T18-55-34-339Z.yml  (+35 more)
android/: build.gradle  capacitor.settings.gradle  gradle.properties  variables.gradle
app-demo/: demo-manifest.json  index.html  remote_config.json
assets/: main-BX7a4-0Q.css  main-hDsbluIr.js
dist-hot/: hot-manifest.json  pack_hot_bundle.ps1
docs/: README.md  academic.html  academic.txt  android-signing.md  architecture.html  architecture.txt  build-release.html  build-release.txt  campus-life.html  campus-life.txt  campus-map-cache.md  campus-network-hbut.md  chaoxing-protocol.md  community-notifications.html  community-notifications.txt  configuration.html  configuration.txt  css-bundle-baseline.md  debug-bridge-api.md  developer.html  developer.txt  extensions.html  extensions.txt  faq.html  faq.txt  guide.html  guide.txt  important-declarations-checklist.md  index.html  migration-guide.md  module-system.html  (+27 more)
src-tauri/: .taurignore  Cargo.toml  README.md  ai_entry_url_cache.json  check_output.txt  clippy.toml  error.txt  error2.txt  error3.txt  hbut_cookie_snapshot.json  src-tauri_dir_architecture.md  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/android-native-setup/: AndroidManifest_changes.xml  MainActivity_changes.kt  NotificationService.kt
src-tauri/capabilities/: main.json
src-tauri/docs/: db.md  http_server.md  lib.md  main.md  parser.md
src-tauri/docs/http_client/: academic.md  ai.md  auth.md  electricity.md  mod.md  session.md  utils.md
src-tauri/docs/modules/: ai.md  calendar.md  classroom.md  electricity.md  exam.md  grades.md  notification.md  one_code.md  ranking.md  schedule.md  student_info.md  training_plan.md  transaction.md
src-tauri/exports/: schedule_2510231106_2025-2026-1_w16_20260204_134213.ics  schedule_2510231106_2025-2026-1_w23_20260204_134941.ics
src-tauri/icons/: README.md  icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: README.md  app_state.rs  credential_store.rs  db.rs  db.rs.md  debug_bridge.rs  http_client.rs  http_client.rs.bak  http_client_logic.md  http_server.rs  lib.rs  lib.rs.md  lib_logic.md  main.rs  main.rs.md  parser.rs  parser.rs.md  qxzkb_options.rs  runtime_log.rs
src-tauri/src/commands/: campus_network.rs  credentials.rs  mod.rs
src-tauri/src/http_client/: academic.rs  academic.rs.md  ai.rs  ai.rs.md  auth.rs  auth.rs.md  electricity.rs  electricity.rs.md  http_client_dir_architecture.md  library.rs  library.rs.md  mod.rs  mod.rs.md  qxzkb.rs  qxzkb.rs.md  session.rs  session.rs.md  utils.rs  utils.rs.md
src-tauri/src/modules/: README.md  ai.rs  ai_logic.md  calendar.rs  chaoxing_class.rs  chaoxing_sso.rs  classroom.rs  classroom_logic.md  course_selection.rs  electricity.rs  electricity_logic.md  exam.rs  exam_logic.md  grades.rs  grades_logic.md  mod.rs  module_bundle.rs  notification.rs  one_code.rs  online_learning.rs  ranking.rs  schedule.rs  schedule_logic.md  school_inbox.rs  school_website_embed.rs  session_guard.rs  smart_orientation.rs  sports_venue.rs  student_info.rs  teaching_eval.rs  training_plan.rs  training_plan_logic.md  transaction.rs  weather.rs
src-tauri/src/modules/campus_network/: eportal.rs  mod.rs  probe.rs  srun.rs  types.rs  xencode.rs
src-tauri/src/modules/chaoxing_checkin/: commands.rs  errors.rs  inflight.rs  interceptor.rs  log_repo.rs  mod.rs  protocol.rs  qr_decode.rs  qr_url.rs  screen_capture.rs  session.rs  types.rs
src-tauri/src/modules/usage_stats/: commands.rs  log_repo.rs  mod.rs  types.rs
src-tauri/src/utils/: mask.rs  mod.rs  truncate.rs
src-tauri/tests/fixtures/: swae_setbindroom_ok.json
src-tauri/tests/fixtures/smart-orientation/: bed_myInfo.json  config_myInfo.json  currentYear.json  forecast_myInfo.json  myTeacher.json  overview.json  student_myInfo.json
(+3382 files in other folders)
