[package]
name = "hbut-helper"
version = "1.0.14"
edition = "2021"
description = "湖北工业大学教务助手 - Tauri 桌面应用"
authors = ["HBUT Helper Team"]

# Release 编译优化 - 减小体积
[profile.release]
opt-level = "s"      # 优化体积
lto = true           # Link Time Optimization
codegen-units = 1    # 单线程编译，更好优化
panic = "abort"      # 移除 panic 展开代码
strip = true         # 移除调试符号

# Android 专用优化
[profile.release.package."*"]
opt-level = "s"

[lib]
name = "hbut_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-autostart = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "multipart", "rustls-tls", "stream"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
async-stream = "0.3"
scraper = "0.20"
regex = "1.10"
base64 = "0.22"
aes = "0.8"
cbc = "0.1"
rand = "0.8"
thiserror = "1.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
chrono = { version = "0.4.43", features = ["serde"] }
html-escape = "0.2"
urlencoding = "2.1"
jsonwebtoken = "9.3"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
