[package]
name = "hbut-helper"
version = "1.4.2"
edition = "2021"
description = "湖北工业大学教务助手 - Tauri 桌面应用"
authors = ["HBUT Helper Team"]
license = "GPL-3.0-or-later"

# Release 编译优化 - 以最小体积为优先
[profile.release]
opt-level = "z"      # 极致体积优化
lto = "fat"          # 更激进的跨 crate 优化
codegen-units = 1    # 单单元，换取更小产物
panic = "abort"      # 移除 panic 展开代码
strip = "symbols"    # 去除符号表
debug = 0            # 不保留调试信息
incremental = false  # release 不使用增量编译

# Android 专用优化
[profile.release.package."*"]
opt-level = "z"

[lib]
name = "hbut_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["unstable"] }
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-keep-screen-on = "0.1.4"
tauri-plugin-window-state = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "multipart", "rustls-tls", "stream"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "net", "sync", "time"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
async-stream = "0.3"
scraper = "0.20"
regex = "1.10"
base64 = "0.22"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
aes = "0.8"
cbc = "0.1"
rand = "0.8"
thiserror = "1.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
chrono = { version = "0.4.43", features = ["serde"] }
html-escape = "0.2"
urlencoding = "2.1"
md5 = "0.7"
qrcode = "0.14"
jsonwebtoken = "9.3"
sha2 = "0.10"
zip = "2.2"
png = "0.18"
rqrr = "0.9"
image = "0.25"
dashmap = "6"
url = "2"

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
notify-rust = "4.11.7"
xcap = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
rfd = "0.15"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage", "Win32_Storage_Xps", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
testing = []

[dev-dependencies]
proptest = "1"
proptest-derive = "0.5"
wiremock = "0.6"
tempfile = "3"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
